--- a/app/src/main/res/layout/fragment_exercises.xml
+++ b/app/src/main/res/layout/fragment_exercises.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/aqua"
-    tools:context=".ui.workout.ExercisesFragment">
+    tools:context=".ui.exercises.ExercisesFragment">
 
     <TextView
         android:id="@+id/filtrarPor"
