--- a/app/src/main/res/layout/fragment_adicionar_exercicio.xml
+++ b/app/src/main/res/layout/fragment_adicionar_exercicio.xml
@@ -14,6 +14,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="51dp"
+            android:text=" ←"
+            android:textColor="@color/white"
+            android:textSize="30sp">
+
+        </Button>
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/circleImageView"
             android:layout_width="228dp"
