--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_default">
+    android:layout_margin="@dimen/margin_default"
+    android:id="@+id/cvExercise">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -48,7 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvExercise"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/favorite_grey_icon" />
+            android:src="@drawable/favorite_icon" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
